--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<!-- Reveal.js core CSS -->
 	<link rel="stylesheet" href="dist/reveal.css">
-	<link rel="stylesheet" href="dist/theme/moon.css" id="theme">
+	<link rel="stylesheet" href="dist/theme/dracula.css" id="theme">
 	<link rel="stylesheet" href="custom.css">
 
 
