--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="reveal">
 		<div class="slides">
 			<section 
-				data-markdown="slides.md"
+				data-markdown="model_uncertainty.md"
 				data-separator="^---$"
 				data-separator-vertical="^--$"
 				data-separator-notes="^Note:"
